images inside services and complete translation

--- a/wp-content/themes/raro/languages/es_ES.po
+++ b/wp-content/themes/raro/languages/es_ES.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2020-10-27 18:30-0400\n"
-"PO-Revision-Date: 2020-10-27 18:30-0400\n"
+"PO-Revision-Date: 2020-10-28 10:29-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -72,9 +72,9 @@ msgid ""
 "Limiting yourself because you’re unsure<br/>of your success and fear failure "
 "is the wrong attitude.<br/>Trust us and trust yourself, lets reach higher"
 msgstr ""
-"Limitarte porque no estas seguro del éxito<br/>y tienes miedo al fracaso, es "
-"una mala actitud.<br/>Confiá en nosotros y en ti mismo,<br/>juntos "
-"conquistaremos la victoria"
+"Limitarte porque no estas seguro del éxito<br class=\"hidden-lg\" /> y "
+"tienes miedo al fracaso, es una mala actitud.<br/>Confiá en nosotros y en ti "
+"mismo,<br class=\"hidden-lg\" />juntos conquistaremos la victoria"
 
 #: page-home.php:83 page-home.php:151 page-home.php:219 page-home.php:287
 msgid "Contact us"
@@ -89,9 +89,9 @@ msgid ""
 "It’s all about what you want and your commitment to it.<br />There is "
 "nothing impossible. It’s all up to you.<br />And you found us"
 msgstr ""
-"Todo es acerca de lo que quieres<br />y el compromiso que tengas para "
-"lograrlo<br />No hay nada imposible. El éxito depende de ti.<br />Y lo "
-"encontraras con nosotros"
+"Todo es acerca de lo que quieres<br class=\"hidden-lg\" />y el compromiso "
+"que tengas para lograrlo<br />No hay nada imposible. El éxito depende de ti."
+"<br />Y lo encontraras con nosotros"
 
 #: page-home.php:182
 msgid "WHAT ARE YOU AFRAID OF?"
